--- a/visual-testing-app/index.html
+++ b/visual-testing-app/index.html
@@ -11,6 +11,8 @@
 
   <body>
     <div id="app"></div>
+    <script src="/dist/vendors.js"></script>
+    <script src="/dist/ui-kit.js"></script>
     <script src="/dist/main.js"></script>
   </body>
 </html>
