--- a/visual-testing-app/index.html
+++ b/visual-testing-app/index.html
@@ -6,7 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <title>Playground for examples</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i' rel='stylesheet' type='text/css'></link>
+    <title>UI-Kit | Visual testing app</title>
   </head>
 
   <body>
