--- a/visual-testing-app/index.html
+++ b/visual-testing-app/index.html
@@ -8,6 +8,15 @@
     />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i' rel='stylesheet' type='text/css'></link>
     <title>UI-Kit | Visual testing app</title>
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        font-size: 13px;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
