--- a/visual-testing-app/index.html
+++ b/visual-testing-app/index.html
@@ -15,6 +15,7 @@
         padding: 0;
         font-size: 13px;
         height: 100vh;
+        font-family: 'Open Sans', sans-serif;
       }
     </style>
   </head>
